--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body
 }
 
 input{
-    background-color: hsl(0, 0%, 10%);
+    background-color: hsl(0, 0%, 25%);
     color: white;
 }
 
@@ -70,7 +70,7 @@ input{
     position: fixed;
     height: 100%;
     width: 30%;
-    background-color: hsl(0, 0%, 25%);
+    background-color: hsl(0, 0%, 37%);
     color: white;
     border-right: black solid 2px;
     border-left: black solid 2px;
@@ -112,4 +112,14 @@ footer * {
     box-sizing: border-box;
     border: none;
     outline: none;
+}
+
+.language_select {
+    margin-top: 16px;
+    color: white;
+    background-color:hsl(0, 0%, 24%)
+}
+
+.nav_selected {
+    background-color: #b2001e;
 }
