register and index

--- a/style.css
+++ b/style.css
@@ -118,9 +118,9 @@ footer {
     padding: 3px;
     background-color: #b2001e;
     color: white;
-    left: 0;
-    bottom: 0;
     width: 100%;
+    position: absolute;
+    bottom: 0;
 }
 
 footer * {
