--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ input{
     right: 0;
 }
 
+#rightpanel img{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .side-panel img:hover{
     cursor: pointer;
 }
