--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ input{
     right: 0;
 }
 
-.side-panel{
+.panel{
     position: fixed;
     height: 100%;
     width: 30%;
@@ -94,7 +94,7 @@ input{
     top: 0;
 }
 
-.side-panel img{
+.panel img{
     position: absolute;
     top: 0;
     right: 0;
@@ -104,17 +104,18 @@ input{
     position: absolute;
     top: 0;
     left: 0;
+    transform: scaleX(-1);
 }
 
-.side-panel img:hover{
+.panel img:hover{
     cursor: pointer;
 }
 
-.side-panel h1{
+.panel h1{
     margin-top: 30px;
 }
 
-.side-panel input{
+.panel input{
     margin-bottom: 10px;
 }
 
