--- a/style.css
+++ b/style.css
@@ -126,8 +126,17 @@ article
 
 article h2
 {
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     text-align: center;
+    font-size: 40pt;
+    font-family: monospace;
+    color: antiquewhite;
+    padding: 10%;
     border: 2px black solid;
+    background-image: url("https://i.imgur.com/9lwyCJD.gif");
 }
 
 aside
@@ -142,7 +151,6 @@ footer {
     background-color: #b2001e;
     color: white;
     width: 100%;
-    position: absolute;
     bottom: 0;
 }
 
