--- a/src/Style.css
+++ b/src/Style.css
@@ -13,6 +13,7 @@ Css for the constant elements (header, footer, nav)
 .App{
   display: flex;
   flex-direction: column;
+  color: hsl(0, 0%, 100%);
 }
 
 .nav {
@@ -140,6 +141,47 @@ Css for the pages required to order food
 
 .food div{
   transform: translate(-50%, 200%);
+}
+
+/*
+
+Css for Sign in and Sign up pages
+
+*/
+
+.SignPanel{
+  width: 30%;
+  height: 100%;
+  background-color: hsl(0, 0%, 25%);
+}
+
+.SignPanel h1{
+  text-align: center;
+  padding: 20px;
+}
+
+.Form{
+  display: flex;
+  flex-direction: column;
+  padding: 60px;
+  padding-top: 30px;
+}
+
+.Form button{
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(350, 100%, 35%);
+  margin: 50px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.Form button:hover{
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(350, 100%, 25%);
+}
+
+.Form select:hover{
+  background-color: hsl(0, 0%, 95%);
 }
 
 /*
