--- a/src/Style.css
+++ b/src/Style.css
@@ -77,7 +77,6 @@ Css for the pages required to order food
 
 .selector {
   position: relative;
-  background-color: hsl(350, 100%, 35%);
   background-size: cover;
   text-align: center;
   text-shadow: 2px 2px hsl(0, 0%, 0%);
@@ -89,8 +88,17 @@ Css for the pages required to order food
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  background-size: cover;
   text-decoration: none;
   color: hsl(0, 0%, 100%);
+  background-color:hsl(350, 100%, 35%);
+  box-shadow: 2px 2px 5px hsl(350, 100%, 25%)
+}
+
+.selector a:hover {
+  background-color: hsl(350, 100%, 25%);
+  box-shadow: 2px 2px 5px hsl(350, 100%, 15%)
+  
 }
 
 .selector div {
@@ -113,6 +121,11 @@ Css for the pages required to order food
   border-radius: 100%;
 }
 
+.city a:hover {
+  width: 260px;
+  height: 260px;
+}
+
 .restaurant {
   width: 250px;
   height: 250px;
@@ -124,6 +137,11 @@ Css for the pages required to order food
   width: 250px;
   height: 250px;
   border-radius: 60px;
+}
+
+.restaurant a:hover {
+  width: 260px;
+  height: 260px;
 }
 
 .food {
@@ -139,8 +157,15 @@ Css for the pages required to order food
   border-radius: 60px;
 }
 
+.food a:hover {
+  width: 460px;
+  height: 260px;
+}
+
 .food div{
-  transform: translate(-50%, 200%);
+  margin-top: 80px;
+  transform: translate(-50%, -50%);
+  font-size: 75%;
 }
 
 /*
