felhasználó törlése lehetőség

--- a/EtelfutarWPF/MainWindow.xaml
+++ b/EtelfutarWPF/MainWindow.xaml
@@ -12,14 +12,16 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
-            <MenuItem Header="Bejelentkezés" Click="Bejelentkezes_Click"></MenuItem>
+            <MenuItem Header="Bejelentkezés" Name="menu_bejelentkezes" Click="Bejelentkezes_Click"></MenuItem>
             <MenuItem Header="Regisztráció" Click="Regisztracio_Click"></MenuItem>
-            <MenuItem Header="Felhasználók" Name="menu_felhasznalok" IsEnabled="True" Click="Felhasznalok_Click"></MenuItem>
+            <MenuItem Header="Felhasználók" Name="menu_felhasznalok" IsEnabled="False" Click="Felhasznalok_Click"></MenuItem>
             <MenuItem Header="Kijelentkezés" Name="menu_kijelentkezes" IsEnabled="False" Click="Kijelentkezes_Click"></MenuItem>
+            <MenuItem Header="Beállítások" Name="menu_beallitasok" IsEnabled="True" Click="Beallitasok_Click"></MenuItem>
         </Menu>
         <StackPanel Grid.Row="1">
             <DataGrid Name="dgr_felhasznalok"></DataGrid>
-            <Button Click="Torles_Click"></Button>
+            <Button Margin="0,10,0,0" Name="btn_torles" Width="110" Content="Felhasználó Törlése" Click="Torles_Click" IsEnabled="False"></Button>
+            <Button Margin="0,10,0,0" Name="btn_modositas" Width="110" Content="Felhasználó Módosítása" Click="Modositas_Click" IsEnabled="False"></Button>
         </StackPanel>
     </Grid>
 </Window>
