--- a/EtelfutarWPF/LoginWindow.xaml
+++ b/EtelfutarWPF/LoginWindow.xaml
@@ -6,12 +6,15 @@
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
         Title="Ételfutár | Bejelentkezés" Height="300" Width="350">
+    <Window.Background>
+        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
+    </Window.Background>
     <StackPanel>
         <Label Content="Felhasználó név:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_felhasznalo_nev" Width="200" Text="TakacsL"></TextBox>
+        <TextBox Name="tbx_felhasznalo_nev" Width="200" Text="TakacsL" Background="AntiqueWhite"></TextBox>
         <Label Content="Jelszó:" HorizontalAlignment="Center"></Label>
-        <PasswordBox Name="pbx_jelszo" Width="200" Password="TakacsLaszlo"></PasswordBox>
-        <Button Click="Bejelentkezes_Click" Content="Bejelentkezés" Width="100" Margin="0,10,0,0"></Button>
-        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0"></Button>
+        <PasswordBox Name="pbx_jelszo" Width="200" Password="TakacsLaszlo" Background="AntiqueWhite"></PasswordBox>
+        <Button Click="Bejelentkezes_Click" Content="Bejelentkezés" Width="100" Margin="0,10,0,0" Background="LightGreen"></Button>
+        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0" Background="IndianRed"></Button>
     </StackPanel>
 </Window>
