--- a/EtelfutarWPF/MainWindow.xaml
+++ b/EtelfutarWPF/MainWindow.xaml
@@ -6,12 +6,15 @@
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
         Title="Ételfutár" Height="450" Width="800">
+    <Window.Background>
+        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
+    </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0">
+        <Menu Height="20" Margin="0,-185,0,0">
             <MenuItem Header="Bejelentkezés" Name="menu_bejelentkezes" Click="Bejelentkezes_Click"></MenuItem>
             <MenuItem Header="Regisztráció" Click="Regisztracio_Click"></MenuItem>
             <MenuItem Header="Felhasználók" Name="menu_felhasznalok" IsEnabled="False" Click="Felhasznalok_Click"></MenuItem>
@@ -20,8 +23,8 @@
         </Menu>
         <StackPanel Grid.Row="1">
             <DataGrid Name="dgr_felhasznalok"></DataGrid>
-            <Button Margin="0,10,0,0" Name="btn_torles" Width="110" Content="Felhasználó Törlése" Click="Torles_Click" IsEnabled="False"></Button>
-            <Button Margin="0,10,0,0" Name="btn_modositas" Width="110" Content="Felhasználó Módosítása" Click="Modositas_Click" IsEnabled="False"></Button>
+            <Button Margin="0,10,0,0" Name="btn_torles" Width="110" Content="Felhasználó Törlése" Click="Torles_Click" IsEnabled="False" Background="Red"></Button>
+            <Button Margin="0,10,0,0" Name="btn_modositas" Width="130" Content="Felhasználó Módosítása" Click="Modositas_Click" IsEnabled="False" Background="Gold"></Button>
         </StackPanel>
     </Grid>
 </Window>
