--- a/EtelfutarWPF/SettingsWindow.xaml
+++ b/EtelfutarWPF/SettingsWindow.xaml
@@ -6,9 +6,12 @@
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
         Title="Ételfutár | Beállítások" Height="250" Width="400">
+    <Window.Background>
+        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
+    </Window.Background>
     <StackPanel>
         <Label HorizontalAlignment="Center" Content="Használt Cím:"></Label>
-        <TextBox Name="tbx_cim" Width="200" Text="http://localhost:5000"></TextBox>
-        <Button Width="100" Margin="0,10,0,0" Content="Ok" Click="Ok_Click"></Button>
+        <TextBox Name="tbx_cim" Width="200" Text="http://localhost:5000" Background="AntiqueWhite"></TextBox>
+        <Button Width="100" Margin="0,10,0,0" Content="Ok" Click="Ok_Click" Background="LightGreen"></Button>
     </StackPanel>
 </Window>
