--- a/src/Style.css
+++ b/src/Style.css
@@ -16,6 +16,7 @@ Css for the constant elements (header, footer, nav)
   color: hsl(0, 0%, 100%);
   min-height: 100%;
   background-color: hsl(0, 0%, 100%);
+  padding:30px;
 }
 
 .nav {
@@ -94,7 +95,7 @@ Css for the pages required to order food
   text-decoration: none;
   color: hsl(0, 0%, 100%);
   background-color:hsl(350, 100%, 35%);
-  box-shadow: 2px 2px 5px hsl(350, 100%, 25%)
+  box-shadow: 2px 2px 5px hsl(350, 100%, 25%);
 }
 
 .selector a:hover {
@@ -180,6 +181,7 @@ Css for Sign in and Sign up pages
   width: 30%;
   height: 100%;
   background-color: hsl(0, 0%, 25%);
+  border-radius: 30px;
 }
 
 .SignPanel h1{
@@ -216,6 +218,14 @@ Css for Sign in and Sign up pages
 Ids
 
 */
+
+#Order {
+  background-color: hsl(0, 0%, 25%);
+  height: fit-content;
+  min-height: 100px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
 
 #banner {
   background-image: url("img/header.jpg");
