--- a/EtelfutarWPF/LoginWindow.xaml
+++ b/EtelfutarWPF/LoginWindow.xaml
@@ -5,16 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
+        Background="#404040"
         Title="Ételfutár | Bejelentkezés" Height="300" Width="350">
-    <Window.Background>
-        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
     <StackPanel>
-        <Label Content="Felhasználó név:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_felhasznalo_nev" Width="200" Text="TakacsL" Background="AntiqueWhite"></TextBox>
-        <Label Content="Jelszó:" HorizontalAlignment="Center"></Label>
-        <PasswordBox Name="pbx_jelszo" Width="200" Password="TakacsLaszlo" Background="AntiqueWhite"></PasswordBox>
-        <Button Click="Bejelentkezes_Click" Content="Bejelentkezés" Width="100" Margin="0,10,0,0" Background="LightGreen"></Button>
-        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0" Background="IndianRed"></Button>
+        <Label Foreground="White" Content="Felhasználó név:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_felhasznalo_nev" Width="200" Text="TakacsL"></TextBox>
+        <Label Foreground="White" Content="Jelszó:" HorizontalAlignment="Center"></Label>
+        <PasswordBox Name="pbx_jelszo" Width="200" Password="TakacsLaszlo"></PasswordBox>
+        <Button Click="Bejelentkezes_Click" Content="Bejelentkezés" Width="100" Margin="0,10,0,0" Background="#b3001e" Foreground="White"></Button>
+        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0"></Button>
     </StackPanel>
 </Window>
