--- a/EtelfutarWPF/MainWindow.xaml
+++ b/EtelfutarWPF/MainWindow.xaml
@@ -6,23 +6,20 @@
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
         Title="Ételfutár" Height="450" Width="800">
-    <Window.Background>
-        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Menu Height="20" Margin="0,-185,0,0">
+        <Menu Background="#404040" Height="20" Margin="0,-185,0,0" Foreground="White">
             <MenuItem Header="Bejelentkezés" Name="menu_bejelentkezes" Click="Bejelentkezes_Click"></MenuItem>
             <MenuItem Header="Regisztráció" Click="Regisztracio_Click"></MenuItem>
-            <MenuItem Header="Felhasználók" Name="menu_felhasznalok" IsEnabled="False" Click="Felhasznalok_Click"></MenuItem>
+            <ComboBox Width="110" Name="cbx_tablazatok" Background="#404040" Foreground="White" SelectionChanged="cbx_tablazatok_SelectionChanged" IsEnabled="False"/>
             <MenuItem Header="Kijelentkezés" Name="menu_kijelentkezes" IsEnabled="False" Click="Kijelentkezes_Click"></MenuItem>
             <MenuItem Header="Beállítások" Name="menu_beallitasok" IsEnabled="True" Click="Beallitasok_Click"></MenuItem>
         </Menu>
         <StackPanel Grid.Row="1">
-            <DataGrid Name="dgr_felhasznalok"></DataGrid>
+            <DataGrid Background="AntiqueWhite" Name="dgr_adatok"></DataGrid>
             <Button Margin="0,10,0,0" Name="btn_torles" Width="110" Content="Felhasználó Törlése" Click="Torles_Click" IsEnabled="False" Background="Red"></Button>
             <Button Margin="0,10,0,0" Name="btn_modositas" Width="130" Content="Felhasználó Módosítása" Click="Modositas_Click" IsEnabled="False" Background="Gold"></Button>
         </StackPanel>
