--- a/EtelfutarWPF/RegisterWindow.xaml
+++ b/EtelfutarWPF/RegisterWindow.xaml
@@ -5,26 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
+        Background="#404040"
         Title="Ételfutár | Regisztráció" Height="410" Width="350">
-    <Window.Background>
-        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
     <StackPanel>
-        <Label Content="Felhasználó név:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_felhasznalo_nev" Width="200" Background="AntiqueWhite"></TextBox>
-        <Label Content="Teljes név:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_teljes_nev" Width="200" Background="AntiqueWhite"></TextBox>
-        <Label Content="Email cím:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_email_cim" Width="200" Background="AntiqueWhite"></TextBox>
-        <Label Content="Város Id:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_varos_id" Width="200" Background="AntiqueWhite"></TextBox>
-        <Label Content="Lakcím:" HorizontalAlignment="Center"></Label>
-        <TextBox Name="tbx_lakcim" Width="200" Background="AntiqueWhite"></TextBox>
-        <Label Content="Jelszó:" HorizontalAlignment="Center"></Label>
-        <PasswordBox Name="pbx_jelszo" Width="200" Background="AntiqueWhite"></PasswordBox>
-        <Label Content="Jelszó újra:" HorizontalAlignment="Center"></Label>
-        <PasswordBox Name="pbx_jelszo_ujra" Width="200" Background="AntiqueWhite"></PasswordBox>
-        <Button Click="Regisztracio_Click" Content="Regisztrálás" Width="100" Margin="0,10,0,0" Background="LightGreen"></Button>
-        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0" Background="IndianRed"></Button>
+        <Label Foreground="White" Content="Felhasználó név:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_felhasznalo_nev" Width="200"></TextBox>
+        <Label Foreground="White" Content="Teljes név:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_teljes_nev" Width="200"></TextBox>
+        <Label Foreground="White" Content="Email cím:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_email_cim" Width="200"></TextBox>
+        <Label Foreground="White" Content="Város Id:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_varos_id" Width="200"></TextBox>
+        <Label Foreground="White" Content="Lakcím:" HorizontalAlignment="Center"></Label>
+        <TextBox Name="tbx_lakcim" Width="200"></TextBox>
+        <Label Foreground="White" Content="Jelszó:" HorizontalAlignment="Center"></Label>
+        <PasswordBox Name="pbx_jelszo" Width="200"></PasswordBox>
+        <Label Foreground="White" Content="Jelszó újra:" HorizontalAlignment="Center"></Label>
+        <PasswordBox Name="pbx_jelszo_ujra" Width="200"></PasswordBox>
+        <Button Click="Regisztracio_Click" Content="Regisztrálás" Width="100" Margin="0,10,0,0" Background="#b3001e" Foreground="White"></Button>
+        <Button Click="Megse_Click" Content="Mégse" Width="100" Margin="0,10,0,0"></Button>
     </StackPanel>
 </Window>
