--- a/EtelfutarWPF/SettingsWindow.xaml
+++ b/EtelfutarWPF/SettingsWindow.xaml
@@ -5,13 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EtelfutarWPF"
         mc:Ignorable="d"
-        Title="Ételfutár | Beállítások" Height="250" Width="400">
-    <Window.Background>
-        <ImageBrush ImageSource="pack://application:,,,/gfx/backgrounds/etelfutar_ppt_background.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
+        Background="#404040"
+        Title="Ételfutár | Beállítások" Height="150" Width="300">
     <StackPanel>
-        <Label HorizontalAlignment="Center" Content="Használt Cím:"></Label>
-        <TextBox Name="tbx_cim" Width="200" Text="http://localhost:5000" Background="AntiqueWhite"></TextBox>
-        <Button Width="100" Margin="0,10,0,0" Content="Ok" Click="Ok_Click" Background="LightGreen"></Button>
+        <Label Foreground="White" HorizontalAlignment="Center" Content="Használt Cím:"></Label>
+        <TextBox Name="tbx_cim" Width="200" Text="http://localhost:5000"></TextBox>
+        <Button Width="100" Margin="0,10,0,0" Content="Ok" Click="Ok_Click" Background="#b3001e"></Button>
     </StackPanel>
 </Window>
